--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/creamy-bay-scallop-spaghetti.html">Creamy Bay Scallop Spagetti</a>
+        <a href="recipes/creamy-bay-scallop-spaghetti.html">Creamy Bay Scallop Spaghetti</a>
     </body>
 
 
