--- a/recipes/creamy-bay-scallop-spaghetti.html
+++ b/recipes/creamy-bay-scallop-spaghetti.html
@@ -3,11 +3,11 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Creamy Bay Scallop Spagetti</title>
+        <title>Creamy Bay Scallop Spaghetti</title>
     </head>
 
     <body>
-        <h1>Creamy Bay Scallop Spagetti</h1>
+        <h1>Creamy Bay Scallop Spaghetti</h1>
     </body>
 
 </html>
