--- a/recipes/creamy-bay-scallop-spaghetti.html
+++ b/recipes/creamy-bay-scallop-spaghetti.html
@@ -8,6 +8,16 @@
 
     <body>
         <h1>Creamy Bay Scallop Spaghetti</h1>
+        <img src="../images/creamy-bay-scallop-spaghetti.webp" alt="Creamy Bay Scallop Spaghetti">
+        <h2>Description</h2>
+            <p>This scallop pasta dinner with a creamy sauce is fast and easy. I cook the scallops
+                 a bit longer than many chefs, but that gives the dish more flavor and they're still 
+                 tender and moist. I think you'll agree, the sherry sauce benefits significantly from 
+                 the longer cook time.</p>
+        <h2>Ingredients</h2>
+                <ul>
+                    
+                </ul>
     </body>
 
 </html>
