Added chicken marsala image | Put recipe links into list and added chicken marsala recipe | Added description, ingredients, and steps elements to page | changed name of chicken marsala page to reflect its file type (html)

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Recipepes</title>
+        <title>Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/creamy-bay-scallop-spaghetti.html">Creamy Bay Scallop Spaghetti</a>
-    </body>
+        <ul>
+            <li><a href="recipes/creamy-bay-scallop-spaghetti.html">Creamy Bay Scallop Spaghetti</a></li>
+            <li><a href="recipes/chicken-marsala.html">Chicken Marsala</a></li>
+            <li></li>
+        </ul>
+            </body>
 
 
 </html>
