--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="recipes/creamy-bay-scallop-spaghetti.html">Creamy Bay Scallop Spaghetti</a></li>
             <li><a href="recipes/chicken-marsala.html">Chicken Marsala</a></li>
-            <li></li>
+            <li><a href="recipes/mocha-cookie-bars.html">Mocha Cookie Bars</a></li>
         </ul>
             </body>
 
